--- a/shared/styles-scss/pages/character-specimen.scss
+++ b/shared/styles-scss/pages/character-specimen.scss
@@ -153,6 +153,7 @@
         transition:
             background 0.2s,
             color 0.2s;
+        white-space: nowrap;
         &.markings-hidden .background {
             visibility: hidden;
         }
