Add scroll bar for unicode block names in the dropdown (#2733)

--- a/shared/styles-scss/pages/character-specimen.scss
+++ b/shared/styles-scss/pages/character-specimen.scss
@@ -48,6 +48,8 @@
 				columns: 2;
 				font-size: 0.625rem;
 				padding-top: 1.25em;
+				max-height: 90vh;
+				overflow-y: auto;
 				> ol {
 					margin: 0;
 					padding: 0;
